@startuml
title UML-діаграма прототипу програмних класів

hide circle
skinparam classAttributeIconSize 0

class Користувач {
  - id: INT
  - ім'я: String
  - вік: Integer
  - алергії: String
  - ціль: String
  + отриматиПерсоналізованийПланХарчування(): ПланХарчування
  + передатиДаніПроЗдоров'я(): ДаніПроЗдоров'я
  + отриматиОцінкуСамоповаги(): Float
  + отриматиДосягнення(): List<Досягнення>
  + отриматиТанцювальніПодії(): List<ТанцювальніПодії>
}

class ДаніПроЗдоров'я {
  - id: INT
  - користувач_id: INT
  - вага: Float
  - зріст: Integer
  - індекс_маси_тіла: Float
  - рівень_активності: String
  - дієтичні_обмеження: String
  + розрахуватиІМТ(): Float
  + аналізуватиДані(): void
  + валідуватиДані(): boolean
}

class ПланХарчування {
  - id: INT
  - користувач_id: INT
  - сніданок: String
  - обід: String
  - вечеря: String
  - калорійність: Integer
  + сформуватиПланХарчування(): void
  + надатиПлан(): void
  + оновитиПлан(): void
}

class Рекомендації {
  - id: INT
  - план_id: INT
  - обсяг_води_на_день: Float
  - фізична_активність: String
  + сформуватиРекомендації(): void
  + надатиРекомендації(): void
}

class Досягнення {
  - id: INT
  - користувач_id: INT
  - кількість_тренувань: Integer
  - виконані_вправи: String
  - нагороди: String
  + оновитиДосягнення(): void
  + відобразитиДосягнення(): void
}

class Самоповага {
  - id: INT
  - користувач_id: INT
  - рівень: Float
  - впевненість: String
  + оцінитиСамоповагу(): Float
  + аналізуватиДосягнення(): void
  + надатиОцінку(): void
}

class ТанцювальніПодії {
  - id: INT
  - користувач_id: INT
  - назва: String
  - тип_танцю: String
  - дата_проведення: Date
  - місце_проведення: String
  + отриматиПодії(): List<ТанцювальніПодії>
  + створитиПодію(): void
}

class ХарчовийСервіс {
  + аналізуватиДаніПроЗдоров'я(дані: ДаніПроЗдоров'я): void
  + сформуватиПерсоналізованийПлан(користувач: Користувач): ПланХарчування
}

class СамоповагаСервіс {
  + аналізуватиДосягнення(досягнення: List<Досягнення>): void
  + оцінитиСамоповагу(користувач: Користувач): Float
}

class КонтролерКористувача {
  + отриматиПланХарчування(користувач_id: INT): ПланХарчування
  + передатиДаніПроЗдоров'я(дані: ДаніПроЗдоров'я): void
  + отриматиОцінкуСамоповаги(користувач_id: INT): Float
}

' Relationships based on conceptual model
"Користувач" ||--|| "ДаніПроЗдоров'я" : має
"Користувач" ||--|| "ПланХарчування" : отримує
"Користувач" ||--o{ "Досягнення" : має
"Користувач" ||--|| "Самоповага" : отримує
"Користувач" ||--o{ "ТанцювальніПодії" : читає
"ПланХарчування" ||--o{ "Рекомендації" : містить
"Користувач" }--|| "ХарчовийСервіс" : використовує
"Користувач" }--|| "СамоповагаСервіс" : використовує
"Користувач" }--|| "КонтролерКористувача" : взаємодіє
"ХарчовийСервіс" ..|> "Рекомендації" : створює
"СамоповагаСервіс" ..|> "Самоповага" : оновлює

@enduml
